k8s/whoami/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
          imagePullPolicy: Always
